# minesweeper-2026-c

./: .gitignore  CMakeLists.txt  README.md  main.c  minefield.c  minefield.h  set.h  settings.c  settings.h  settings.ini  tile.h  vector.h
